--- a/src/index.html
+++ b/src/index.html
@@ -38,6 +38,15 @@
       <p>
         <span id="p2p_ping"></span>
       </p>
+      <h2>Push:</h2>
+      <p class="grid-1">
+        <input id="p2p_message_push" type="text" style="width: 100%" />
+        <br />
+        <button id="p2p_send_button" type="button">Send</button>
+      </p>
+      <p>
+        <span id="p2p_message_get"></span>
+      </p>
     </div>
 
     <script type="module" src="scripts/main.js"></script>
