--- a/src/index.html
+++ b/src/index.html
@@ -18,7 +18,7 @@
   </head>
 
   <body>
-    <div id="root"></div>
+    <div id="root-home"></div>
     <script type="module" src="scripts/main.jsx"></script>
   </body>
 </html>
