rework storage and views

--- a/src/index.html
+++ b/src/index.html
@@ -19,6 +19,6 @@
 
   <body>
     <div id="root-home"></div>
-    <script type="module" src="scripts/main.jsx"></script>
+    <script type="module" src="scripts/main.tsx"></script>
   </body>
 </html>
